fix requires for XML::Simple

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Business-RealEx
 
 {{$NEXT}}
+        - fix requires for XML::Simple
 
 0.01  2013-12-27 09:57:42 CST
         - Initial release
